# loki-doki

./: .env.example  .gitignore  .pi.env.example  .pre-commit-config.yaml  AGENTS.md  BUGS.md  CLAUDE.md  LICENSE  NOTICES.md  README.md  TODO.md  debug_classifier.py  debug_fail.py  debug_mrt.py  main.py  pyproject.toml  requirements-app.txt  run.bat  run.py  run.sh  test_mrt_search.py  test_stream_skill_wiring.py  test_web_search.py
.githooks/: pre-commit
.github/: copilot-instructions.md
app/: __init__.py  catalog.py  classifier.py  config.py  db.py  debug.py  deps.py  local_routes.py  main.py  orchestrator.py  runtime.py  security.py
docs/: AUDIT_AND_PORT_PLAN.md  CHARACTER_SYSTEM.md  CODEX.md  DESIGN.md  IMPLEMENTATION_PLAN.md  LokiDoki_Memory_System_Master_Plan.md  LokiDoki_Routing_Design_v2.md  MEMORY_DESIGN.md  MEMORY_ROADMAP.md  PHASE_CURRENT.md  PI_WORKFLOW.md  PROGRESS.md  REFERENCE.md  SHOWTIMES_STATUS.md  SKILL_STUBS.md  SPEECH_NATURALIZATION.md  VISION.md  animator_issues.md  codebase_memory_audit.md  lokidoki-presence-enhancement-design.md  lokidoki-rich-response-design.md  lokidoki-test-runner-page-design.md  lokidoki_memory_improvements.md  maps-build.md  maps-dist.md  memory_architecture_spec.md  memory_improvement_plan.md  migration_status.md  models.md  monolithic_files_audit.md  onyx_analysis.md  prompt_compiler_optimizations.md  publish-repos.md  skill_implementation_guide.md  skills.md  skills_gemini_analysis.md  spec.md  v2-graduation-plan.md  v2-skill-catalog.md  v2-skills-design.md  (+1 more)
frontend/: TODO.md  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
lokidoki/: main.py
scripts/: _pi_common.sh  audit_v2_registry.py  bench_llm_models.py  bench_routing.py  bench_v2_gemma_models.py  bench_v2_llm_models.py  build_offline_bundle.py  enforce_residency.py  eval_experiments.py  fetch_shadcn_themes.py  install_git_hooks.sh  migrate_skill_config_v1_to_v2.py  parse_themes.py  (+13 more)
(+1574 files in other folders)
