[project]
name = "lokidoki-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "passlib[bcrypt]>=1.7.4",
    "piper-tts>=1.4.2",
    "pre-commit>=4.5.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-multipart>=0.0.24",
    "sqlite-vec>=0.1.9",
    "fastembed>=0.4.2",
    "uvicorn>=0.44.0",
    "spacy>=3.8,<3.9",
    "en-core-web-sm",
    "rapidfuzz>=3.14.1",
    "num2words>=0.5.14",
]

# Pin the spaCy English model to a wheel so `uv sync` installs it
# automatically — no separate `python -m spacy download` step needed.
# Bumping the spaCy minor requires bumping this URL to a matching model
# release (model version must match spaCy minor). spaCy 3.8 is the first
# release built against numpy 2.x — earlier versions trip an ABI mismatch.
[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
